--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vite": "^3.1.0"
   },
   "dependencies": {
+    "js-abbreviation-number": "^1.4.0",
     "socket.io-client": "^4.5.2"
   }
 }
